feat: Remove usage of Guava (#206)