@@ -3,11 +3,11 @@ package io.github.stavshamir.springwolf.asyncapi.types;
 import com.asyncapi.v2.binding.channel.amqp.AMQPChannelBinding;
 import com.asyncapi.v2.binding.message.amqp.AMQPMessageBinding;
 import com.asyncapi.v2.binding.operation.amqp.AMQPOperationBinding;
-import com.google.common.collect.ImmutableMap;
 import io.github.stavshamir.springwolf.asyncapi.types.channel.operation.message.header.AsyncHeaders;
 import lombok.Builder;
 
 import java.util.Collections;
+import java.util.Map;
 
 public class AmqpConsumerData extends ConsumerData {
 
@@ -18,16 +18,16 @@ public class AmqpConsumerData extends ConsumerData {
 
         AMQPChannelBinding.ExchangeProperties exchangeProperties = new AMQPChannelBinding.ExchangeProperties();
         exchangeProperties.setName(exchangeName);
-        this.channelBinding = ImmutableMap.of("amqp", AMQPChannelBinding.builder()
+        this.channelBinding = Map.of("amqp", AMQPChannelBinding.builder()
                 .is("routingKey")
                 .exchange(exchangeProperties)
                 .build());
 
-        this.operationBinding = ImmutableMap.of("amqp", AMQPOperationBinding.builder()
+        this.operationBinding = Map.of("amqp", AMQPOperationBinding.builder()
                 .cc(Collections.singletonList(routingKey))
                 .build());
 
-        this.messageBinding = ImmutableMap.of("amqp", AMQPMessageBinding.builder()
+        this.messageBinding = Map.of("amqp", AMQPMessageBinding.builder()
                 .build());
 
         this.payloadType = payloadType;
