@@ -4,8 +4,6 @@ import com.asyncapi.v2._0_0.model.channel.ChannelItem;
 import com.asyncapi.v2._0_0.model.channel.operation.Operation;
 import com.asyncapi.v2._0_0.model.info.Info;
 import com.asyncapi.v2._0_0.model.server.Server;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Maps;
 import io.github.stavshamir.springwolf.asyncapi.scanners.beans.DefaultBeanMethodsScanner;
 import io.github.stavshamir.springwolf.asyncapi.scanners.classes.ConfigurationClassScanner;
 import io.github.stavshamir.springwolf.asyncapi.types.channel.bindings.EmptyChannelBinding;
@@ -70,7 +68,7 @@ class CloudStreamFunctionChannelsScannerTest {
         BindingProperties testConsumerInBinding = new BindingProperties();
         String topicName = "test-consumer-input-topic";
         testConsumerInBinding.setDestination(topicName);
-        when(bindingServiceProperties.getBindings()).thenReturn(ImmutableMap.of(
+        when(bindingServiceProperties.getBindings()).thenReturn(Map.of(
                 "testConsumer-in-0", testConsumerInBinding
         ));
 
@@ -83,23 +81,23 @@ class CloudStreamFunctionChannelsScannerTest {
                 .title(String.class.getSimpleName())
                 .payload(PayloadReference.fromModelName(String.class.getSimpleName()))
                 .headers(HeaderReference.fromModelName(AsyncHeaders.NOT_DOCUMENTED.getSchemaName()))
-                .bindings(ImmutableMap.of("kafka", new EmptyMessageBinding()))
+                .bindings(Map.of("kafka", new EmptyMessageBinding()))
                 .build();
 
         Operation operation = Operation.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyOperationBinding()))
+                .bindings(Map.of("kafka", new EmptyOperationBinding()))
                 .description("Auto-generated description")
                 .operationId("test-consumer-input-topic_publish_testConsumer")
                 .message(message)
                 .build();
 
         ChannelItem expectedChannel = ChannelItem.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyChannelBinding()))
+                .bindings(Map.of("kafka", new EmptyChannelBinding()))
                 .publish(operation)
                 .build();
 
         assertThat(channels)
-                .containsExactly(Maps.immutableEntry(topicName, expectedChannel));
+                .containsExactly(Map.entry(topicName, expectedChannel));
     }
 
 
@@ -109,7 +107,7 @@ class CloudStreamFunctionChannelsScannerTest {
         BindingProperties testSupplierOutBinding = new BindingProperties();
         String topicName = "test-supplier-output-topic";
         testSupplierOutBinding.setDestination(topicName);
-        when(bindingServiceProperties.getBindings()).thenReturn(ImmutableMap.of(
+        when(bindingServiceProperties.getBindings()).thenReturn(Map.of(
                 "testSupplier-out-0", testSupplierOutBinding
         ));
 
@@ -122,23 +120,23 @@ class CloudStreamFunctionChannelsScannerTest {
                 .title(String.class.getSimpleName())
                 .payload(PayloadReference.fromModelName(String.class.getSimpleName()))
                 .headers(HeaderReference.fromModelName(AsyncHeaders.NOT_DOCUMENTED.getSchemaName()))
-                .bindings(ImmutableMap.of("kafka", new EmptyMessageBinding()))
+                .bindings(Map.of("kafka", new EmptyMessageBinding()))
                 .build();
 
         Operation operation = Operation.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyOperationBinding()))
+                .bindings(Map.of("kafka", new EmptyOperationBinding()))
                 .description("Auto-generated description")
                 .operationId("test-supplier-output-topic_subscribe_testSupplier")
                 .message(message)
                 .build();
 
         ChannelItem expectedChannel = ChannelItem.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyChannelBinding()))
+                .bindings(Map.of("kafka", new EmptyChannelBinding()))
                 .subscribe(operation)
                 .build();
 
         assertThat(channels)
-                .containsExactly(Maps.immutableEntry(topicName, expectedChannel));
+                .containsExactly(Map.entry(topicName, expectedChannel));
     }
 
     @Test
@@ -153,7 +151,7 @@ class CloudStreamFunctionChannelsScannerTest {
         BindingProperties testFunctionOutBinding = new BindingProperties();
         testFunctionOutBinding.setDestination(outputTopicName)
         ;
-        when(bindingServiceProperties.getBindings()).thenReturn(ImmutableMap.of(
+        when(bindingServiceProperties.getBindings()).thenReturn(Map.of(
                 "testFunction-in-0", testFunctionInBinding,
                 "testFunction-out-0", testFunctionOutBinding
         ));
@@ -167,18 +165,18 @@ class CloudStreamFunctionChannelsScannerTest {
                 .title(Integer.class.getSimpleName())
                 .payload(PayloadReference.fromModelName(Integer.class.getSimpleName()))
                 .headers(HeaderReference.fromModelName(AsyncHeaders.NOT_DOCUMENTED.getSchemaName()))
-                .bindings(ImmutableMap.of("kafka", new EmptyMessageBinding()))
+                .bindings(Map.of("kafka", new EmptyMessageBinding()))
                 .build();
 
         Operation subscribeOperation = Operation.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyOperationBinding()))
+                .bindings(Map.of("kafka", new EmptyOperationBinding()))
                 .description("Auto-generated description")
                 .operationId("test-out-topic_subscribe_testFunction")
                 .message(subscribeMessage)
                 .build();
 
         ChannelItem subscribeChannel = ChannelItem.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyChannelBinding()))
+                .bindings(Map.of("kafka", new EmptyChannelBinding()))
                 .subscribe(subscribeOperation)
                 .build();
 
@@ -188,24 +186,24 @@ class CloudStreamFunctionChannelsScannerTest {
                 .title(String.class.getSimpleName())
                 .payload(PayloadReference.fromModelName(String.class.getSimpleName()))
                 .headers(HeaderReference.fromModelName(AsyncHeaders.NOT_DOCUMENTED.getSchemaName()))
-                .bindings(ImmutableMap.of("kafka", new EmptyMessageBinding()))
+                .bindings(Map.of("kafka", new EmptyMessageBinding()))
                 .build();
 
         Operation publishOperation = Operation.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyOperationBinding()))
+                .bindings(Map.of("kafka", new EmptyOperationBinding()))
                 .description("Auto-generated description")
                 .operationId("test-in-topic_publish_testFunction")
                 .message(publishMessage)
                 .build();
 
         ChannelItem publishChannel = ChannelItem.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyChannelBinding()))
+                .bindings(Map.of("kafka", new EmptyChannelBinding()))
                 .publish(publishOperation)
                 .build();
 
         assertThat(channels).contains(
-                Maps.immutableEntry(inputTopicName, publishChannel),
-                Maps.immutableEntry(outputTopicName, subscribeChannel)
+                Map.entry(inputTopicName, publishChannel),
+                Map.entry(outputTopicName, subscribeChannel)
         );
     }
 
@@ -221,7 +219,7 @@ class CloudStreamFunctionChannelsScannerTest {
         BindingProperties testFunctionOutBinding = new BindingProperties();
         testFunctionOutBinding.setDestination(outputTopicName)
         ;
-        when(bindingServiceProperties.getBindings()).thenReturn(ImmutableMap.of(
+        when(bindingServiceProperties.getBindings()).thenReturn(Map.of(
                 "kStreamTestFunction-in-0", testFunctionInBinding,
                 "kStreamTestFunction-out-0", testFunctionOutBinding
         ));
@@ -235,18 +233,18 @@ class CloudStreamFunctionChannelsScannerTest {
                 .title(Integer.class.getSimpleName())
                 .payload(PayloadReference.fromModelName(Integer.class.getSimpleName()))
                 .headers(HeaderReference.fromModelName(AsyncHeaders.NOT_DOCUMENTED.getSchemaName()))
-                .bindings(ImmutableMap.of("kafka", new EmptyMessageBinding()))
+                .bindings(Map.of("kafka", new EmptyMessageBinding()))
                 .build();
 
         Operation subscribeOperation = Operation.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyOperationBinding()))
+                .bindings(Map.of("kafka", new EmptyOperationBinding()))
                 .description("Auto-generated description")
                 .operationId("test-out-topic_subscribe_kStreamTestFunction")
                 .message(subscribeMessage)
                 .build();
 
         ChannelItem subscribeChannel = ChannelItem.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyChannelBinding()))
+                .bindings(Map.of("kafka", new EmptyChannelBinding()))
                 .subscribe(subscribeOperation)
                 .build();
 
@@ -256,24 +254,24 @@ class CloudStreamFunctionChannelsScannerTest {
                 .title(String.class.getSimpleName())
                 .payload(PayloadReference.fromModelName(String.class.getSimpleName()))
                 .headers(HeaderReference.fromModelName(AsyncHeaders.NOT_DOCUMENTED.getSchemaName()))
-                .bindings(ImmutableMap.of("kafka", new EmptyMessageBinding()))
+                .bindings(Map.of("kafka", new EmptyMessageBinding()))
                 .build();
 
         Operation publishOperation = Operation.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyOperationBinding()))
+                .bindings(Map.of("kafka", new EmptyOperationBinding()))
                 .description("Auto-generated description")
                 .operationId("test-in-topic_publish_kStreamTestFunction")
                 .message(publishMessage)
                 .build();
 
         ChannelItem publishChannel = ChannelItem.builder()
-                .bindings(ImmutableMap.of("kafka", new EmptyChannelBinding()))
+                .bindings(Map.of("kafka", new EmptyChannelBinding()))
                 .publish(publishOperation)
                 .build();
 
         assertThat(channels).contains(
-                Maps.immutableEntry(inputTopicName, publishChannel),
-                Maps.immutableEntry(outputTopicName, subscribeChannel)
+                Map.entry(inputTopicName, publishChannel),
+                Map.entry(outputTopicName, subscribeChannel)
         );
     }
 
